Fixed bug where accordion would move off screen when drop down was opened.

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
 body
     {
         margin: 0;
-        padding: 0;
+        padding: 2rem;
         box-sizing: border-box;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         color: hsl(237, 12%, 33%);
         
     }
@@ -42,12 +39,14 @@ body
         background-color: white;
         min-height: 100%;
         max-width: 480px;
-        min-width: 335px;
-        margin: 1rem;
+        min-width: 280px;
         padding-bottom: 1rem;
-        
         position: relative;        
-        
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 8rem;
+        margin-bottom: 4rem;
     }
 
 
@@ -140,7 +139,8 @@ body
         display: block; 
         margin-left: auto;
         margin-right: auto;
-        margin-top: -106px;
+        margin-bottom: -124px;
+        top: -110px;
         padding-right: 25px;
         position: relative;
 
